[package]
name = "bevy_frp"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.17.1", default-features = false }
bevy_app = { version = "0.17.1", default-features = false }
bevy_platform = { version = "0.17.1", default-features = false, features = ["alloc"] }
bevy_query_observer = "0.1.0"
log = "0.4"
variadics_please = "1.1.0"
uuid = { version = "1.18", default-features = false }
